--- a/disque_btest.htm
+++ b/disque_btest.htm
@@ -14771,8 +14771,8 @@ table td, table th {
             <a name='P1469'>1469</a>&nbsp;
           </td>
           <td style='background-color: white;'>
-            <span title='push constant 2' id='C1469'>
-              Push 2
+            <span title='push constant 1' id='C1469'>
+              Push 1
             </span>
           </td>
         </tr>
@@ -15215,7 +15215,7 @@ var vardir = [
 ];
 var state =
 {
-  "nstates": 2642832,
+  "nstates": 46585,
   "hvm": {
     "modules": {
         "alloc": {
@@ -15598,8 +15598,6 @@ var state =
                 "      else:",
                 "        returnVal = d -> current -> value",
                 "        d -> current = d -> current -> next",
-                "",
-                "        # free(node)",
                 "",
                 "    release(?d -> lock)",
                 ""
@@ -21621,8 +21619,8 @@ var state =
             "push constant 1"
           ],
         [
-            "Push 2",
-            "push constant 2"
+            "Push 1",
+            "push constant 1"
           ],
         [
             "2-ary ..",
@@ -39762,66 +39760,79 @@ var state =
           },
         {
             "module": "disque",
-            "endline": 61,
+            "endline": 59,
             "stmt": [
-                61,
+                59,
                 5,
-                61,
+                59,
                 23
               ],
-            "line": 61,
+            "line": 59,
             "endcolumn": 14,
             "column": 14
           },
         {
             "module": "disque",
-            "endline": 61,
+            "endline": 59,
             "stmt": [
-                61,
+                59,
                 5,
-                61,
+                59,
                 23
               ],
-            "line": 61,
+            "line": 59,
             "endcolumn": 14,
             "column": 14
           },
         {
             "module": "disque",
-            "endline": 61,
+            "endline": 59,
             "stmt": [
-                61,
+                59,
                 5,
-                61,
+                59,
                 23
               ],
-            "line": 61,
+            "line": 59,
             "endcolumn": 22,
             "column": 19
           },
         {
             "module": "disque",
-            "endline": 61,
+            "endline": 59,
             "stmt": [
-                61,
+                59,
                 5,
-                61,
+                59,
                 23
               ],
-            "line": 61,
+            "line": 59,
             "endcolumn": 22,
             "column": 14
           },
         {
             "module": "disque",
-            "endline": 61,
+            "endline": 59,
             "stmt": [
-                61,
+                59,
                 5,
-                61,
+                59,
                 23
               ],
-            "line": 61,
+            "line": 59,
+            "endcolumn": 23,
+            "column": 5
+          },
+        {
+            "module": "disque",
+            "endline": 59,
+            "stmt": [
+                59,
+                5,
+                59,
+                23
+              ],
+            "line": 59,
             "endcolumn": 23,
             "column": 5
           },
@@ -39830,37 +39841,24 @@ var state =
             "endline": 61,
             "stmt": [
                 61,
-                5,
-                61,
-                23
-              ],
-            "line": 61,
-            "endcolumn": 23,
-            "column": 5
-          },
-        {
-            "module": "disque",
-            "endline": 63,
-            "stmt": [
-                63,
                 1,
-                63,
+                61,
                 6
               ],
-            "line": 63,
+            "line": 61,
             "endcolumn": 6,
             "column": 1
           },
         {
             "module": "disque",
-            "endline": 63,
+            "endline": 61,
             "stmt": [
-                63,
+                61,
                 1,
-                63,
+                61,
                 6
               ],
-            "line": 63,
+            "line": 61,
             "endcolumn": 6,
             "column": 1
           },
@@ -48569,7 +48567,7 @@ var state =
         {
             "value": {
                 "type": "int",
-                "value": 2
+                "value": 1
               },
             "op": "Push"
           },
@@ -49672,41 +49670,41 @@ var state =
     0,
     0,
     0,
-    444,
-    1260,
-    1260,
-    1260,
-    464,
-    464,
-    464,
-    112,
-    352,
-    352,
-    352,
-    112,
-    112,
-    112,
-    112,
-    112,
-    112,
-    112,
+    50,
+    133,
+    133,
+    133,
+    50,
+    50,
+    50,
+    17,
+    33,
+    33,
+    33,
+    17,
+    17,
+    17,
+    17,
+    17,
+    17,
+    17,
     0,
-    112,
-    220,
-    220,
-    220,
-    220,
-    108,
-    108,
-    108,
-    108,
-    108,
-    108,
-    108,
-    108,
-    108,
-    108,
-    108,
+    17,
+    34,
+    34,
+    34,
+    34,
+    17,
+    17,
+    17,
+    17,
+    17,
+    17,
+    17,
+    17,
+    17,
+    17,
+    17,
     0,
     0,
     0,
@@ -49941,369 +49939,9 @@ var state =
     1,
     1,
     1,
-    24,
-    48,
-    48,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    0,
-    0,
-    28,
-    56,
-    56,
-    56,
-    28,
-    28,
-    28,
-    0,
-    0,
-    0,
-    0,
-    0,
-    0,
-    0,
-    0,
-    0,
-    0,
-    0,
-    0,
-    0,
-    1,
-    1,
-    1,
-    1,
-    1,
-    1,
-    1,
-    1,
-    1,
-    1,
-    1,
-    0,
-    0,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    14,
-    14,
-    14,
-    14,
-    14,
-    14,
-    14,
-    14,
-    10,
-    10,
-    10,
-    10,
-    10,
-    10,
-    10,
-    10,
-    10,
-    10,
-    10,
-    10,
-    10,
-    10,
-    10,
-    10,
-    10,
+    2,
     4,
     4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    4,
-    14,
-    14,
-    14,
-    14,
-    14,
-    14,
-    14,
-    0,
-    200,
-    200,
-    200,
-    200,
-    200,
-    48,
-    48,
-    48,
-    48,
-    48,
-    48,
-    48,
-    48,
-    48,
-    48,
-    20,
-    20,
-    20,
-    20,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    20,
-    20,
-    20,
-    20,
-    20,
-    20,
-    20,
-    20,
-    20,
-    20,
-    20,
-    20,
-    20,
-    20,
-    20,
-    20,
-    20,
-    8,
-    8,
-    8,
-    8,
-    8,
-    8,
-    8,
-    8,
-    8,
-    8,
-    8,
-    8,
-    8,
-    8,
-    8,
-    8,
-    8,
-    8,
-    8,
-    8,
-    8,
-    8,
-    28,
-    28,
-    28,
-    28,
-    48,
-    48,
-    48,
-    48,
-    48,
-    44,
-    44,
-    0,
-    0,
-    220,
-    220,
-    220,
-    220,
-    220,
-    50,
-    50,
-    50,
-    50,
-    50,
-    50,
-    50,
-    50,
-    50,
-    50,
-    50,
-    22,
-    22,
-    22,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    28,
-    50,
-    50,
-    50,
-    50,
-    50,
-    50,
-    50,
-    0,
-    1,
-    1,
-    1,
-    1,
-    1,
-    1,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    24,
-    14,
-    14,
-    14,
-    14,
-    14,
-    14,
-    14,
-    138,
-    138,
-    0,
-    200,
-    200,
-    200,
-    200,
-    200,
-    200,
-    200,
-    200,
-    200,
-    200,
-    200,
-    44,
-    44,
-    44,
-    44,
-    44,
-    44,
-    44,
-    44,
-    44,
-    44,
-    280,
-    280,
-    0,
-    220,
-    220,
-    220,
-    220,
-    220,
-    220,
-    220,
-    220,
-    220,
-    220,
-    220,
-    50,
-    50,
-    50,
-    50,
-    50,
-    50,
-    50,
-    50,
-    50,
-    50,
-    496,
-    496,
-    1,
-    1,
-    1,
-    1,
-    3,
-    3,
     2,
     2,
     2,
@@ -50311,6 +49949,366 @@ var state =
     2,
     2,
     2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    0,
+    0,
+    2,
+    4,
+    4,
+    4,
+    2,
+    2,
+    2,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    0,
+    0,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    0,
+    24,
+    24,
+    24,
+    24,
+    24,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    6,
+    6,
+    6,
+    6,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    0,
+    2,
+    2,
+    2,
+    2,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    0,
+    0,
+    24,
+    24,
+    24,
+    24,
+    24,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    6,
+    6,
+    6,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    0,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    2,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    7,
+    7,
+    0,
+    24,
+    24,
+    24,
+    24,
+    24,
+    24,
+    24,
+    24,
+    24,
+    24,
+    24,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    28,
+    28,
+    0,
+    24,
+    24,
+    24,
+    24,
+    24,
+    24,
+    24,
+    24,
+    24,
+    24,
+    24,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    8,
+    38,
+    38,
+    1,
+    1,
+    1,
+    1,
+    2,
+    2,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
+    1,
     1,
     1,
     1,
